Implementa banco de dados (PostgreSQL) e segurança com .env

--- a/teste1.ipynb
+++ b/teste1.ipynb
@@ -37,88 +37,7 @@
      ]
     }
    ],
-   "source": [
-    "import face_recognition\n",
-    "import cv2\n",
-    "import os\n",
-    "\n",
-    "# --- FASE 1: CARREGAR TODAS AS PESSOAS CONHECIDAS ---\n",
-    "\n",
-    "print(\"Carregando rostos conhecidos...\")\n",
-    "\n",
-    "# Listas para guardar os encodings e os nomes\n",
-    "encodings_conhecidos = []\n",
-    "nomes_conhecidos = []\n",
-    "\n",
-    "# Caminho para a pasta de pessoas conhecidas\n",
-    "caminho_pasta = \"pessoas_conhecidas\"\n",
-    "\n",
-    "# Percorre todos os arquivos na pasta\n",
-    "for nome_arquivo in os.listdir(caminho_pasta):\n",
-    "    # Pega o nome da pessoa a partir do nome do arquivo (ex: \"joao.jpg\" -> \"joao\")\n",
-    "    nome_pessoa = os.path.splitext(nome_arquivo)[0]\n",
-    "    \n",
-    "    try:\n",
-    "        # Carrega a imagem e pega o encoding\n",
-    "        imagem = face_recognition.load_image_file(f\"{caminho_pasta}/{nome_arquivo}\")\n",
-    "        encoding = face_recognition.face_encodings(imagem)[0]\n",
-    "        \n",
-    "        # Adiciona o encoding e o nome nas listas\n",
-    "        encodings_conhecidos.append(encoding)\n",
-    "        nomes_conhecidos.append(nome_pessoa)\n",
-    "        print(f\"  - {nome_pessoa} carregado com sucesso!\")\n",
-    "    except IndexError:\n",
-    "        print(f\"  - AVISO: Nenhum rosto encontrado em {nome_arquivo}. Pulando.\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"  - ERRO ao carregar {nome_arquivo}: {e}\")\n",
-    "\n",
-    "print(f\"\\nCadastro concluído! {len(nomes_conhecidos)} pessoas registradas.\")\n",
-    "\n",
-    "\n",
-    "# --- FASE 2: CARREGAR A IMAGEM DE TESTE E RECONHECER ---\n",
-    "\n",
-    "imagem_teste_path = \"fotos_teste/teste_grupo.jpg\"\n",
-    "imagem_teste = face_recognition.load_image_file(imagem_teste_path)\n",
-    "\n",
-    "# Encontra as localizações e encodings dos rostos na imagem de teste\n",
-    "localizacoes_rostos = face_recognition.face_locations(imagem_teste)\n",
-    "encodings_teste = face_recognition.face_encodings(imagem_teste, localizacoes_rostos)\n",
-    "\n",
-    "# Converte a imagem para o formato do OpenCV para desenhar\n",
-    "imagem_para_marcar = cv2.cvtColor(imagem_teste, cv2.COLOR_RGB2BGR)\n",
-    "\n",
-    "print(f\"\\nEncontrados {len(encodings_teste)} rostos na imagem de teste. Iniciando reconhecimento...\")\n",
-    "\n",
-    "# --- FASE 3: COMPARAR E DESENHAR ---\n",
-    "\n",
-    "for (topo, direita, baixo, esquerda), encoding_teste in zip(localizacoes_rostos, encodings_teste):\n",
-    "    # Compara o rosto encontrado com todos os rostos conhecidos\n",
-    "    resultados = face_recognition.compare_faces(encodings_conhecidos, encoding_teste, tolerance=0.6)\n",
-    "    \n",
-    "    nome = \"Desconhecido\" # Nome padrão se não for reconhecido\n",
-    "\n",
-    "    # Se alguma correspondência for encontrada\n",
-    "    if True in resultados:\n",
-    "        # Pega o índice da primeira correspondência\n",
-    "        indice_primeiro_match = resultados.index(True)\n",
-    "        nome = nomes_conhecidos[indice_primeiro_match]\n",
-    "\n",
-    "    # Desenha o retângulo e o nome\n",
-    "    if nome == \"Desconhecido\":\n",
-    "        cor = (0, 0, 255) # Vermelho para desconhecidos\n",
-    "    else:\n",
-    "        cor = (0, 255, 0) # Verde para conhecidos\n",
-    "\n",
-    "    cv2.rectangle(imagem_para_marcar, (esquerda, topo), (direita, baixo), cor, 3)\n",
-    "    cv2.putText(imagem_para_marcar, nome, (esquerda + 6, baixo - 6), cv2.FONT_HERSHEY_DUPLEX, 1.0, cor, 2)\n",
-    "\n",
-    "# Mostra o resultado final\n",
-    "cv2.imshow(\"Resultado do Reconhecimento Facial\", imagem_para_marcar)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows()\n",
-    "\n",
-    "print(\"\\nProcesso finalizado!\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -180,132 +99,7 @@
      ]
     }
    ],
-   "source": [
-    "import face_recognition\n",
-    "import cv2\n",
-    "import os\n",
-    "\n",
-    "# --- CORREÇÃO: DEFINIR O DIRETÓRIO DE TRABALHO ---\n",
-    "# Cole aqui o caminho completo que você copiou do explorador de arquivos.\n",
-    "# Exemplo: r\"C:\\Users\\guilh\\Desktop\\projeto_reconhecimento_facial\"\n",
-    "# O 'r' antes da string é importante para evitar problemas com as barras invertidas \"\\\"\n",
-    "caminho_do_projeto = r\"C:\\Users\\guilh\\Desktop\\projeto_reconhecimento_facial\"\n",
-    "os.chdir(caminho_do_projeto)\n",
-    "\n",
-    "print(f\"Diretório de trabalho alterado para: {os.getcwd()}\")\n",
-    "print(\"-\" * 30)\n",
-    "\n",
-    "\n",
-    "# --- FASE 1: CARREGAR TODAS AS PESSOAS CONHECIDAS ---\n",
-    "\n",
-    "print(\"Carregando rostos conhecidos...\")\n",
-    "\n",
-    "# Listas para guardar os encodings e os nomes\n",
-    "encodings_conhecidos = []\n",
-    "nomes_conhecidos = []\n",
-    "\n",
-    "# Caminho para a pasta de pessoas conhecidas (agora é um caminho relativo)\n",
-    "caminho_pasta = \"pessoas_conhecidas\"\n",
-    "\n",
-    "# Percorre todos os arquivos na pasta\n",
-    "for nome_arquivo in os.listdir(caminho_pasta):\n",
-    "    # Pega o nome da pessoa a partir do nome do arquivo (ex: \"joao.jpg\" -> \"joao\")\n",
-    "    nome_pessoa = os.path.splitext(nome_arquivo)[0]\n",
-    "    \n",
-    "    try:\n",
-    "        # Carrega a imagem e pega o encoding\n",
-    "        imagem = face_recognition.load_image_file(f\"{caminho_pasta}/{nome_arquivo}\")\n",
-    "        encoding = face_recognition.face_encodings(imagem)[0]\n",
-    "        \n",
-    "        # Adiciona o encoding e o nome nas listas\n",
-    "        encodings_conhecidos.append(encoding)\n",
-    "        nomes_conhecidos.append(nome_pessoa)\n",
-    "        print(f\"  - {nome_pessoa} carregado com sucesso!\")\n",
-    "    except IndexError:\n",
-    "        print(f\"  - AVISO: Nenhum rosto encontrado em {nome_arquivo}. Pulando.\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"  - ERRO ao carregar {nome_arquivo}: {e}\")\n",
-    "\n",
-    "print(f\"\\nCadastro concluído! {len(nomes_conhecidos)} pessoas registradas.\")\n",
-    "\n",
-    "\n",
-    "# (COLE ISSO NO LUGAR DO SEU LOOP ATUAL)\n",
-    "\n",
-    "# --- NOVA LÓGICA: LOOP PARA PROCESSAR TODAS AS IMAGENS DE TESTE ---\n",
-    "\n",
-    "# Define o caminho para a pasta de testes\n",
-    "caminho_pasta_teste = \"fotos_teste\"\n",
-    "print(f\"\\nIniciando análise das imagens em '{caminho_pasta_teste}'...\\n\")\n",
-    "\n",
-    "# Loop que passa por CADA ARQUIVO na sua pasta de teste\n",
-    "for nome_arquivo_teste in os.listdir(caminho_pasta_teste):\n",
-    "    # Verifica se o arquivo é realmente uma imagem\n",
-    "    if nome_arquivo_teste.lower().endswith(('.png', '.jpg', '.jpeg')):\n",
-    "        \n",
-    "        imagem_teste_path = os.path.join(caminho_pasta_teste, nome_arquivo_teste)\n",
-    "        print(f\"--> Processando imagem: {nome_arquivo_teste}\")\n",
-    "\n",
-    "        # --- FASE 2: CARREGAR A IMAGEM DE TESTE E RECONHECER ---\n",
-    "        imagem_teste = face_recognition.load_image_file(imagem_teste_path)\n",
-    "        localizacoes_rostos = face_recognition.face_locations(imagem_teste)\n",
-    "        encodings_teste = face_recognition.face_encodings(imagem_teste, localizacoes_rostos)\n",
-    "        imagem_para_marcar = cv2.cvtColor(imagem_teste, cv2.COLOR_RGB2BGR)\n",
-    "\n",
-    "        print(f\"    Encontrados {len(encodings_teste)} rostos.\")\n",
-    "\n",
-    "       # Primeiro, adicione esta linha no início do seu script, junto com os outros imports\n",
-    "import numpy as np\n",
-    "\n",
-    "# ... (seu código da Fase 1 e 2 continua igual) ...\n",
-    "\n",
-    "# --- NOVA LÓGICA: LOOP PARA PROCESSAR TODAS AS IMAGENS DE TESTE ---\n",
-    "\n",
-    "# Define o caminho para a pasta de testes\n",
-    "caminho_pasta_teste = \"fotos_teste\"\n",
-    "print(f\"\\nIniciando análise das imagens em '{caminho_pasta_teste}'...\\n\")\n",
-    "\n",
-    "# Loop que passa por CADA ARQUIVO na sua pasta de teste\n",
-    "for nome_arquivo_teste in os.listdir(caminho_pasta_teste):\n",
-    "    # Verifica se o arquivo é realmente uma imagem\n",
-    "    if nome_arquivo_teste.lower().endswith(('.png', '.jpg', '.jpeg')):\n",
-    "        \n",
-    "        imagem_teste_path = os.path.join(caminho_pasta_teste, nome_arquivo_teste)\n",
-    "        print(f\"--> Processando imagem: {nome_arquivo_teste}\")\n",
-    "\n",
-    "        # --- FASE 2: CARREGAR A IMAGEM DE TESTE E RECONHECER ---\n",
-    "        imagem_teste = face_recognition.load_image_file(imagem_teste_path)\n",
-    "        localizacoes_rostos = face_recognition.face_locations(imagem_teste)\n",
-    "        encodings_teste = face_recognition.face_encodings(imagem_teste, localizacoes_rostos)\n",
-    "        imagem_para_marcar = cv2.cvtColor(imagem_teste, cv2.COLOR_RGB2BGR)\n",
-    "\n",
-    "        print(f\"    Encontrados {len(encodings_teste)} rostos.\")\n",
-    "\n",
-    "        # --- FASE 3: COMPARAR E DESENHAR (VERSÃO MELHORADA) ---\n",
-    "        for (topo, direita, baixo, esquerda), encoding_teste in zip(localizacoes_rostos, encodings_teste):\n",
-    "            nome = \"Desconhecido\"\n",
-    "            distancias_faciais = face_recognition.face_distance(encodings_conhecidos, encoding_teste)\n",
-    "            \n",
-    "            if len(distancias_faciais) > 0: # Garante que a lista não está vazia\n",
-    "                melhor_indice_match = np.argmin(distancias_faciais)\n",
-    "                menor_distancia = distancias_faciais[melhor_indice_match]\n",
-    "                \n",
-    "                if menor_distancia < 0.56: # Usando uma tolerância mais rigorosa\n",
-    "                    nome = nomes_conhecidos[melhor_indice_match]\n",
-    "            \n",
-    "            cor = (0, 0, 255) if nome == \"Desconhecido\" else (0, 255, 0)\n",
-    "            cv2.rectangle(imagem_para_marcar, (esquerda, topo), (direita, baixo), cor, 3)\n",
-    "            cv2.putText(imagem_para_marcar, nome, (esquerda + 6, baixo - 6), cv2.FONT_HERSHEY_DUPLEX, 1.0, cor, 2)\n",
-    "\n",
-    "        # --- BLOCO DE EXIBIÇÃO (NO LUGAR CORRETO AGORA) ---\n",
-    "        nome_da_janela = f\"Resultado para: {nome_arquivo_teste}\"\n",
-    "        cv2.namedWindow(nome_da_janela, cv2.WINDOW_NORMAL) \n",
-    "        cv2.imshow(nome_da_janela, imagem_para_marcar)\n",
-    "        print(\"    Pressione qualquer tecla na janela da imagem para ver a próxima...\")\n",
-    "        cv2.waitKey(0) \n",
-    "        cv2.destroyAllWindows()\n",
-    "\n",
-    "print(\"\\nProcesso finalizado! Todas as imagens foram analisadas.\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -352,41 +146,153 @@
      ]
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f928a61-2817-45cf-ac0a-5d925aef7674",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "15d90385-a6bd-4416-9a5c-ffa3e48eabb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conectando ao banco de dados e carregando rostos conhecidos...\n",
+      "  - caio carregado do banco com sucesso!\n",
+      "  - guilherme carregado do banco com sucesso!\n",
+      "  - joao carregado do banco com sucesso!\n",
+      "  - pedro carregado do banco com sucesso!\n",
+      "\n",
+      "Cadastro concluído! 4 pessoas ativas carregadas do banco.\n",
+      "------------------------------\n",
+      "Diretório de trabalho definido para: C:\\Users\\guilh\\Desktop\\projeto_reconhecimento_facial\n",
+      "\n",
+      "Iniciando análise das imagens em 'fotos_teste'...\n",
+      "\n",
+      "--> Processando imagem: arq.jpg.jpeg\n",
+      "    Encontrados 4 rostos.\n",
+      "    Pressione qualquer tecla na janela da imagem para ver a próxima...\n",
+      "--> Processando imagem: cia.jpg.jpeg\n",
+      "    Encontrados 7 rostos.\n",
+      "    Pressione qualquer tecla na janela da imagem para ver a próxima...\n",
+      "--> Processando imagem: festa.jpg.jpeg\n",
+      "    Encontrados 3 rostos.\n",
+      "    Pressione qualquer tecla na janela da imagem para ver a próxima...\n",
+      "--> Processando imagem: orbita.jpg.jpeg\n",
+      "    Encontrados 4 rostos.\n",
+      "    Pressione qualquer tecla na janela da imagem para ver a próxima...\n",
+      "--> Processando imagem: resenha.jpg.jpeg\n",
+      "    Encontrados 5 rostos.\n",
+      "    Pressione qualquer tecla na janela da imagem para ver a próxima...\n",
+      "--> Processando imagem: roca.jpg.jpeg\n",
+      "    Encontrados 3 rostos.\n",
+      "    Pressione qualquer tecla na janela da imagem para ver a próxima...\n",
+      "\n",
+      "Processo finalizado! Todas as imagens foram analisadas.\n"
+     ]
+    }
+   ],
    "source": [
+    "# --- Bloco de Imports (com as novas bibliotecas) ---\n",
     "import face_recognition\n",
     "import cv2\n",
     "import os\n",
     "import numpy as np\n",
+    "import psycopg2\n",
+    "from dotenv import load_dotenv  # <-- Importa a biblioteca para ler o .env\n",
+    "import sys # Para parar o script se a senha não for encontrada\n",
     "\n",
-    "caminho_do_projeto = r\"C:\\Users\\guilh\\Desktop\\projeto_reconhecimento_facial\"\n",
-    "os.chdir(caminho_do_projeto)\n",
+    "# -----------------------------------------------------------------\n",
+    "# CARREGANDO A SENHA DE FORMA SEGURA\n",
+    "# -----------------------------------------------------------------\n",
+    "load_dotenv()  # Carrega as variáveis do arquivo .env\n",
     "\n",
-    "print(f\"Diretório de trabalho alterado para: {os.getcwd()}\")\n",
-    "print(\"-\" * 30)\n",
+    "# Lê a senha do arquivo .env que você criou\n",
+    "SENHA_DO_BANCO = os.getenv(\"DB_PASSWORD\")\n",
     "\n",
-    "print(\"Carregando rostos conhecidos...\")\n",
+    "if not SENHA_DO_BANCO:\n",
+    "    print(\"=\"*50)\n",
+    "    print(\"ERRO: Senha do banco de dados não encontrada!\")\n",
+    "    print(\"Verifique se você criou o arquivo '.env' e colocou DB_PASSWORD='sua_senha' nele.\")\n",
+    "    print(\"=\"*50)\n",
+    "    sys.exit() # Para o script\n",
+    "# -----------------------------------------------------------------\n",
+    "\n",
+    "\n",
+    "def conectar_bd():\n",
+    "    \"\"\"Conecta ao banco de dados PostgreSQL.\"\"\"\n",
+    "    try:\n",
+    "        conn = psycopg2.connect(\n",
+    "            host=\"localhost\",\n",
+    "            database=\"reconhecimento_db\",\n",
+    "            user=\"postgres\",\n",
+    "            password=SENHA_DO_BANCO  # <-- Usa a senha carregada de forma segura\n",
+    "        )\n",
+    "        return conn\n",
+    "    except psycopg2.Error as e:\n",
+    "        print(f\"Erro ao conectar ao banco de dados: {e}\")\n",
+    "        return None\n",
+    "\n",
+    "# --- FASE 1: CARREGAR ROSTOS CONHECIDOS DO BANCO DE DADOS ---\n",
+    "print(\"Conectando ao banco de dados e carregando rostos conhecidos...\")\n",
     "\n",
     "encodings_conhecidos = []\n",
     "nomes_conhecidos = []\n",
     "\n",
-    "caminho_pasta = \"pessoas_conhecidas\"\n",
-    "\n",
-    "for nome_arquivo in os.listdir(caminho_pasta):\n",
-    "    nome_pessoa = os.path.splitext(nome_arquivo)[0]\n",
-    "    \n",
+    "conn = conectar_bd()\n",
+    "if conn:\n",
     "    try:\n",
-    "        imagem = face_recognition.load_image_file(f\"{caminho_pasta}/{nome_arquivo}\")\n",
-    "        encoding = face_recognition.face_encodings(imagem)[0]\n",
-    "        \n",
-    "        encodings_conhecidos.append(encoding)\n",
-    "        nomes_conhecidos.append(nome_pessoa)\n",
-    "        print(f\"  - {nome_pessoa} carregado com sucesso!\")\n",
-    "    except IndexError:\n",
-    "        print(f\"  - AVISO: Nenhum rosto encontrado em {nome_arquivo}. Pulando.\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"  - ERRO ao carregar {nome_arquivo}: {e}\")\n",
+    "        with conn.cursor() as cur:\n",
+    "            # Seleciona apenas funcionários ATIVOS\n",
+    "            sql = \"SELECT nome, encoding_facial FROM funcionarios WHERE status = 'ativo'\"\n",
+    "            cur.execute(sql)\n",
+    "            \n",
+    "            registros = cur.fetchall()\n",
+    "            \n",
+    "            for registro in registros:\n",
+    "                nome = registro[0]\n",
+    "                encoding_binario = registro[1]\n",
+    "                \n",
+    "                # Converte os dados binários (BYTEA) de volta para um array NumPy\n",
+    "                # O encoding de 128 floats é salvo como 1024 bytes (128 * 8 bytes por float)\n",
+    "                encoding = np.frombuffer(encoding_binario, dtype=np.float64)\n",
+    "                \n",
+    "                nomes_conhecidos.append(nome)\n",
+    "                encodings_conhecidos.append(encoding)\n",
+    "                print(f\"  - {nome} carregado do banco com sucesso!\")\n",
+    "                \n",
+    "    except psycopg2.Error as e:\n",
+    "        print(f\"Erro ao consultar o banco de dados: {e}\")\n",
+    "    finally:\n",
+    "        if conn:\n",
+    "            conn.close()\n",
     "\n",
-    "print(f\"\\nCadastro concluído! {len(nomes_conhecidos)} pessoas registradas.\")\n",
+    "print(f\"\\nCadastro concluído! {len(nomes_conhecidos)} pessoas ativas carregadas do banco.\")\n",
+    "print(\"-\" * 30)\n",
+    "\n",
+    "\n",
+    "# --- NADA MUDA DAQUI PARA BAIXO ---\n",
+    "# O resto do seu script (Fases 2 e 3) funciona perfeitamente como antes.\n",
+    "\n",
+    "caminho_do_projeto = r\"C:\\Users\\guilh\\Desktop\\projeto_reconhecimento_facial\"\n",
+    "\n",
+    "# Tenta mudar o diretório de trabalho. Se já estiver lá, tudo bem.\n",
+    "try:\n",
+    "    os.chdir(caminho_do_projeto)\n",
+    "    print(f\"Diretório de trabalho definido para: {os.getcwd()}\")\n",
+    "except FileNotFoundError:\n",
+    "    print(f\"Aviso: Não foi possível mudar o diretório para {caminho_do_projeto}. Verifique o caminho.\")\n",
+    "    # Continua mesmo assim, assumindo que as pastas estão acessíveis\n",
+    "\n",
     "\n",
     "caminho_pasta_teste = \"fotos_teste\"\n",
     "print(f\"\\nIniciando análise das imagens em '{caminho_pasta_teste}'...\\n\")\n",
@@ -412,7 +318,7 @@
     "                melhor_indice_match = np.argmin(distancias_faciais)\n",
     "                menor_distancia = distancias_faciais[melhor_indice_match]\n",
     "                \n",
-    "                if menor_distancia < 0.56:\n",
+    "                if menor_distancia < 0.56: # Sua tolerância ajustada\n",
     "                    nome = nomes_conhecidos[melhor_indice_match]\n",
     "            \n",
     "            cor = (0, 0, 255) if nome == \"Desconhecido\" else (0, 255, 0)\n",
@@ -432,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f928a61-2817-45cf-ac0a-5d925aef7674",
+   "id": "c735e5d6-b745-47b0-a018-b59fb1eb022e",
    "metadata": {},
    "outputs": [],
    "source": []
